api check for serve
Signed-off-by: can <can@anyscale.com>

--- a/.buildkite/lint.rayci.yml
+++ b/.buildkite/lint.rayci.yml
@@ -33,6 +33,7 @@ steps:
     matrix:
       - api_annotations
       - api_policy_check core
+      - api_policy_check serve
       - api_policy_check data
 
   - label: ":lint-roller: lint: linkcheck"
