[train v2][25/n] CheckpointManager Class that can be snapshot and stored remotely (#813)
## Summary

This PR extends the existing `_CheckpointManager` class with pydantic
schema that this object can be snapshot and stored for the usage of ray
train job level restoration. Main changes:
- `checkpoint_manager.py`: defines the new checkpoint manager class that
can be serialized and snapshot;
- `test_v2_checkpoint_manager.py`: tests the save and load state as well
as error handling;

## Related Issues

This PR is the [1/2] steps to solve #763 

## Test Plan

- `test_v2_checkpoint_manager.py::test_save_load_state` tests the
overall save and load state functionalities;
- `test_v2_checkpoint_manager.py::test_load_state_error` tests the error
handling;

## Next Step

- Integrate the new Checkpoint Manager class into the controller;
- Add all the restoration primary APIs

---------

Signed-off-by: Hongpeng Guo <hpguo@anyscale.com>
Co-authored-by: Justin Yu <justinvyu@anyscale.com>
Co-authored-by: matthewdeng <matt@anyscale.com>

--- a/python/ray/train/v2/BUILD
+++ b/python/ray/train/v2/BUILD
@@ -22,6 +22,15 @@ py_test(
 )
 
 py_test(
+    name = "test_checkpoint_manager",
+    size = "small",
+    srcs = ["tests/test_checkpoint_manager.py"],
+    tags = ["exclusive", "team:ml", "train_v2"],
+    deps = ["//:ray_lib", ":conftest"],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+)
+
+py_test(
     name = "test_controller",
     size = "small",
     srcs = ["tests/test_controller.py"],
