--- a/.buildkite/ml.rayci.yml
+++ b/.buildkite/ml.rayci.yml
@@ -81,7 +81,6 @@ steps:
     depends_on: 
       - mlbuild-multipy
       - forge
-    job_env: 
     matrix:
       setup:
         python: ["3.12"]
@@ -99,6 +98,25 @@ steps:
         --build-name mlgpubuild
         --only-tags gpu,gpu_only
     depends_on: [ "mlgpubuild", "forge" ]
+
+  - label: ":train: ml: train gpu {{matrix.python}} tests ({{matrix.worker_id}})"
+    key: ml_gpu_python_tests
+    if: build.pull_request.labels includes "continuous-build" || pipeline.id == "0189e759-8c96-4302-b6b5-b4274406bf89" || pipeline.id == "018f4f1e-1b73-4906-9802-92422e3badaa"
+    tags: 
+      - train
+      - gpu
+    instance_type: gpu-large
+    commands:
+      - bazel run //ci/ray_ci:test_in_docker -- //python/ray/train/... //python/ray/air/... //doc/... ml
+        --workers 2 --worker-id {{matrix.worker_id}} --parallelism-per-worker 2
+        --python-version {{matrix.python}}
+        --build-name mlgpubuild-py{{matrix.python}}
+        --only-tags gpu,gpu_only
+    depends_on: [ "mlgpubuild-multipy", "forge" ]
+    matrix:
+      setup:
+        python: ["3.12"]
+        worker_id: ["0", "1"]
 
   - label: ":train: ml: train authentication tests"
     tags:
