add gpu-only tags for unit tests
Signed-off-by: liuxsh9 <liuxiaoshuang4@huawei.com>

--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -563,7 +563,7 @@ py_test(
     name = "test_torch_device_manager",
     size = "small",
     srcs = ["tests/test_torch_device_manager.py"],
-    tags = ["team:ml", "exclusive", "ray_air"],
+    tags = ["team:ml", "exclusive", "ray_air", "gpu_only"],
     deps = [":train_lib", ":conftest"]
 )
 
