--- a/ci/ray_ci/doc/BUILD.bazel
+++ b/ci/ray_ci/doc/BUILD.bazel
@@ -14,6 +14,13 @@ py_binary(
     exec_compatible_with = ["//:hermetic_python"],
 )
 
+py_binary(
+    name = "load_doc_cache",
+    srcs = ["load_doc_cache.py"],
+    deps = [":doc"],
+    exec_compatible_with = ["//:hermetic_python"],
+)
+
 py_library(
     name = "doc",
     srcs = glob(
