--- a/ci/ray_ci/doc/BUILD.bazel
+++ b/ci/ray_ci/doc/BUILD.bazel
@@ -14,6 +14,14 @@ py_binary(
     exec_compatible_with = ["//:hermetic_python"],
 )
 
+py_binary(
+    name = "update_cache_env",
+    srcs = ["update_cache_env.py"],
+    deps = [":doc"],
+    exec_compatible_with = ["//:hermetic_python"],
+)
+
+
 py_library(
     name = "doc",
     srcs = glob(
