--- a/ci/ray_ci/doc/BUILD.bazel
+++ b/ci/ray_ci/doc/BUILD.bazel
@@ -21,6 +21,13 @@ py_binary(
     exec_compatible_with = ["//:hermetic_python"],
 )
 
+py_binary(
+    name = "cmd_update_cache_env",
+    srcs = ["cmd_update_cache_env.py"],
+    deps = [":doc"],
+    exec_compatible_with = ["//:hermetic_python"],
+)
+
 py_library(
     name = "doc",
     srcs = glob(
@@ -96,6 +103,22 @@ py_test(
     ],
     deps = [
         ":doc",
+        ci_require("pytest"),
+    ],
+)
+
+py_test(
+    name = "test_update_cache_env",
+    size = "small",
+    srcs = ["test_update_cache_env.py"],
+    exec_compatible_with = ["//:hermetic_python"],
+    tags = [
+        "ci_unit",
+        "team:ci",
+    ],
+    deps = [
+        ":doc",
+        ":cmd_update_cache_env",
         ci_require("pytest"),
     ],
 )
