--- a/ci/ray_ci/doc/BUILD.bazel
+++ b/ci/ray_ci/doc/BUILD.bazel
@@ -44,6 +44,7 @@ py_library(
         ci_require("myst_parser"),
         ci_require("myst-nb"),
         ci_require("jupytext"),
+        ci_require("appnope"),
     ],
 )
 
