--- a/src/ray/util/BUILD
+++ b/src/ray/util/BUILD
@@ -36,6 +36,7 @@ cc_library(
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
         "@com_google_googletest//:gtest_main",
+        "@com_google_protobuf//:protobuf",
         "@nlohmann_json",
     ],
 )
