--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2967,6 +2967,23 @@
     timeout: 1800
     script: python experimental/accelerated_dag_gpu_microbenchmark.py
 
+- name: microbenchmark_gpu_multinode_unstable
+  group: core-daily-test
+  team: core
+  frequency: nightly
+  working_dir: microbenchmark
+
+  stable: false
+
+  cluster:
+    byod:
+      type: gpu
+    cluster_compute: experimental/compute_gpu_2x1_aws.yaml
+
+  run:
+    timeout: 1800
+    script: python experimental/accelerated_dag_gpu_microbenchmark.py
+
 - name: benchmark_worker_startup
   group: core-daily-test
   team: core
