[release tests] use large queue to init (#844)
default queue is not big enough to build the images now

--- a/anyscale/ci/buildkite/release.yaml
+++ b/anyscale/ci/buildkite/release.yaml
@@ -13,3 +13,5 @@ steps:
           propagate-environment: True
           volumes:
             - "/var/run/docker.sock:/var/run/docker.sock"
+    agents:
+      queue: large
