--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2982,7 +2982,7 @@
 
   run:
     timeout: 1800
-    script: python experimental/accelerated_dag_gpu_microbenchmark.py
+    script: python experimental/accelerated_dag_gpu_microbenchmark.py --distributed
 
 - name: benchmark_worker_startup
   group: core-daily-test
