--- a/ci/ray_ci/automation/BUILD.bazel
+++ b/ci/ray_ci/automation/BUILD.bazel
@@ -222,3 +222,13 @@ py_test(
         ":automation",
     ],
 )
+
+py_binary(
+    name = "check_ray_wheels_s3",
+    srcs = ["check_ray_wheels_s3.py"],
+    exec_compatible_with = ["//:hermetic_python"],
+    deps = [
+        ":ray_wheels_lib",
+        ci_require("click"),
+    ],
+)
