[Data] Handle logs from `AutoscalingCoordinator` (#859)
`AutoscalingCoordinator` is in the `ray.air` package, and logs from that
package aren't handled by default

---------

Signed-off-by: Balaji Veeramani <balaji@anyscale.com>

--- a/python/ray/data/_internal/logging.yaml
+++ b/python/ray/data/_internal/logging.yaml
@@ -34,3 +34,7 @@ loggers:
         level: DEBUG
         handlers: [file, console, error-file]
         propagate: False
+    ray.anyscale.air._internal.autoscaling_coordinator:
+        level: DEBUG
+        handlers: [file, console, error-file]
+        propagate: False
