--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -2538,14 +2538,15 @@ py_test(
     args = ["--enable-new-api-stack", "--as-test", "--algo=PPO"]
 )
 
-py_test(
-    name = "examples/curiosity/intrinsic_curiosity_model_based_curiosity_dqn",
-    main = "examples/curiosity/intrinsic_curiosity_model_based_curiosity.py",
-    tags = ["team:rllib", "exclusive", "examples"],
-    size = "large",
-    srcs = ["examples/curiosity/intrinsic_curiosity_model_based_curiosity.py"],
-    args = ["--enable-new-api-stack", "--as-test", "--algo=DQN"]
-)
+# TODO (sven): Learns, but very slowly. Needs further tuning.
+# py_test(
+#    name = "examples/curiosity/intrinsic_curiosity_model_based_curiosity_dqn",
+#    main = "examples/curiosity/intrinsic_curiosity_model_based_curiosity.py",
+#    tags = ["team:rllib", "exclusive", "examples"],
+#    size = "large",
+#    srcs = ["examples/curiosity/intrinsic_curiosity_model_based_curiosity.py"],
+#    args = ["--enable-new-api-stack", "--as-test", "--algo=DQN"]
+# )
 
 
 # subdirectory: curriculum/
