--- a/.buildkite/ml.rayci.yml
+++ b/.buildkite/ml.rayci.yml
@@ -41,6 +41,18 @@ steps:
       IMAGE_TO: mlgpubuild
       RAYCI_IS_GPU_BUILD: "true"
 
+  - name: mlgpubuild-multipy
+    label: "wanda: mlgpubuild-py{{matrix}}"
+    wanda: ci/docker/ml.build.wanda.yaml
+    depends_on: oss-ci-base_gpu-multipy
+    env:
+      IMAGE_FROM: cr.ray.io/rayproject/oss-ci-base_gpu-py{{matrix}}
+      IMAGE_TO: mlgpubuild-py{{matrix}}
+      PYTHON: "{{matrix}}"
+      RAYCI_IS_GPU_BUILD: "true"
+    matrix:
+      - "3.12"
+
   # tests
   - label: ":train: ml: train tests"
     tags: train
@@ -53,7 +65,6 @@ steps:
     depends_on: [ "mlbuild", "forge" ]
 
   - label: ":train: ml: {{matrix.python}} tests ({{matrix.worker_id}})"
-    key: ml_python_tests
     if: build.pull_request.labels includes "continuous-build" || pipeline.id == "0189e759-8c96-4302-b6b5-b4274406bf89" || pipeline.id == "018f4f1e-1b73-4906-9802-92422e3badaa"
     tags: 
       - python
@@ -87,6 +98,25 @@ steps:
         --build-name mlgpubuild
         --only-tags gpu,gpu_only
     depends_on: [ "mlgpubuild", "forge" ]
+
+  - label: ":train: ml: train gpu {{matrix.python}} tests ({{matrix.worker_id}})"
+    if: build.pull_request.labels includes "continuous-build" || pipeline.id == "0189e759-8c96-4302-b6b5-b4274406bf89" || pipeline.id == "018f4f1e-1b73-4906-9802-92422e3badaa"
+    tags: 
+      - train
+      - gpu
+    instance_type: gpu-large
+    commands:
+      - bazel run //ci/ray_ci:test_in_docker -- //python/ray/train/... //python/ray/air/... //doc/... ml
+        --workers 2 --worker-id {{matrix.worker_id}} --parallelism-per-worker 2
+        --python-version {{matrix.python}}
+        --build-name mlgpubuild-py{{matrix.python}}
+        --only-tags gpu,gpu_only
+        --except-tags doctest
+    depends_on: [ "mlgpubuild-multipy", "forge" ]
+    matrix:
+      setup:
+        python: ["3.12"]
+        worker_id: ["0", "1"]
 
   - label: ":train: ml: train authentication tests"
     tags:
