--- a/release/ray_release/byod/requirements_byod_3.11.in
+++ b/release/ray_release/byod/requirements_byod_3.11.in
@@ -1,4 +1,4 @@
 # Python requirements to run release tests from anyscale byod (cpu type)
 
-dask[complete]
+dask[complete]==2022.10.1
 pandas==1.5.3
