--- a/src/ray/protobuf/BUILD
+++ b/src/ray/protobuf/BUILD
@@ -247,8 +247,8 @@ python_grpc_compile(
 
 proto_library(
     name = "export_event_proto",
-    srcs = ["export_event.proto"],
-    deps = ["@com_google_protobuf//:struct_proto"],
+    srcs = ["export_api/export_event.proto"],
+    deps = [":export_task_event_proto"],
 )
 
 cc_proto_library(
@@ -259,6 +259,37 @@ cc_proto_library(
 python_grpc_compile(
     name = "export_event_py_proto",
     deps = [":export_event_proto"],
+)
+
+proto_library(
+    name = "export_task_event_proto",
+    srcs = ["export_api/export_task_event.proto"],
+    deps = [":common_proto", ":export_runtime_env_proto"],
+)
+
+cc_proto_library(
+    name = "export_task_event_cc_proto",
+    deps = [":export_task_event_proto"],
+)
+
+python_grpc_compile(
+    name = "export_task_event_py_proto",
+    deps = [":export_task_event_proto"],
+)
+
+proto_library(
+    name = "export_runtime_env_proto",
+    srcs = ["export_api/export_runtime_env.proto"],
+)
+
+cc_proto_library(
+    name = "export_runtime_env_cc_proto",
+    deps = [":export_runtime_env_proto"],
+)
+
+python_grpc_compile(
+    name = "export_runtime_env_py_proto",
+    deps = [":export_runtime_env_proto"],
 )
 
 # Job agent.
