--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -1308,8 +1308,10 @@ numpy==1.26.4
     #   webdataset
     #   xgboost
     #   zoopt
-nvidia-nccl-cu12==2.22.3
-    # via xgboost
+nvidia-nccl-cu12==2.20.5
+    # via
+    #   -r /ray/ci/../python/requirements/ml/core-requirements.txt
+    #   xgboost
 oauth2client==4.1.3
     # via
     #   gcs-oauth2-boto-plugin
