use existing GPU instance
Signed-off-by: Kai-Hsun Chen <kaihsun@anyscale.com>

--- a/python/ray/dag/BUILD
+++ b/python/ray/dag/BUILD
@@ -130,31 +130,13 @@ py_test_module_list(
 )
 
 py_test(
-    name = "test_torch_tensor_dag_gpu",
+    name = "Accelerated DAG GPU tests",
     size = "medium",
-    srcs = [
+    files = [
         "tests/experimental/test_torch_tensor_dag.py",
-    ],
-    env = {"RAY_PYTEST_USE_GPU": "1"},
-    main = "tests/experimental/test_torch_tensor_dag.py",
-    tags = [
-        "accelerated_dag",
-        "exclusive",
-        "multi_gpu",
-        "no_windows",
-        "team:core",
-    ],
-    deps = ["//:ray_lib"],
-)
-
-py_test(
-    name = "test_execution_schedule",
-    size = "medium",
-    srcs = [
         "tests/experimental/test_execution_schedule.py",
     ],
     env = {"RAY_PYTEST_USE_GPU": "1"},
-    main = "tests/experimental/test_execution_schedule.py",
     tags = [
         "accelerated_dag",
         "exclusive",
