--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -1307,6 +1307,10 @@ numpy==1.26.4
     #   webdataset
     #   xgboost
     #   zoopt
+nvidia-nccl-cu12==2.20.5
+    # via
+    #   -r /ray/ci/../python/requirements/ml/core-requirements.txt
+    #   xgboost
 oauth2client==4.1.3
     # via
     #   gcs-oauth2-boto-plugin
@@ -2504,7 +2508,7 @@ wrapt==1.14.1
     #   tensorflow-datasets
 wurlitzer==3.1.1
     # via comet-ml
-xgboost==1.7.6
+xgboost==2.1.0
     # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
 xlrd==2.0.1
     # via -r /ray/ci/../python/requirements/test-requirements.txt
