--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -32,11 +32,11 @@ adal==1.2.7
     # via msrestazure
 aim==3.23.0 ; python_version < "3.12"
     # via -r /ray/ci/../python/requirements/ml/tune-test-requirements.txt
-aim-ui==3.17.5
+aim-ui==3.23.0
     # via aim
 aimrecords==0.0.7
     # via aim
-aimrocks==0.4.0
+aimrocks==0.5.2
     # via aim
 aioboto3==11.2.0
     # via -r /ray/ci/../python/requirements/ml/data-requirements.txt
@@ -224,6 +224,7 @@ boto==2.49.0
 boto3==1.26.76
     # via
     #   -r /ray/ci/../python/requirements/test-requirements.txt
+    #   aim
     #   aiobotocore
     #   aws-sam-translator
     #   moto
@@ -235,7 +236,7 @@ botocore==1.29.76
     #   boto3
     #   moto
     #   s3transfer
-botorch==0.8.5
+botorch==0.11.3
     # via ax-platform
 braceexpand==0.1.7
     # via webdataset
@@ -290,6 +291,7 @@ click==8.1.7
     #   flask
     #   jupyter-cache
     #   mlflow
+    #   pyiceberg
     #   ray
     #   semgrep
     #   tensorflow-datasets
@@ -570,6 +572,7 @@ fsspec==2023.5.0
     #   gradio-client
     #   huggingface-hub
     #   modin
+    #   pyiceberg
     #   pytorch-lightning
     #   s3fs
     #   torch
@@ -666,7 +669,7 @@ googleapis-common-protos==1.61.0
     #   tensorflow-metadata
 gpy==1.13.1
     # via -r /ray/ci/../python/requirements/ml/tune-test-requirements.txt
-gpytorch==1.10
+gpytorch==1.12
     # via botorch
 gradio==3.50.2 ; platform_system != "Windows"
     # via -r /ray/ci/../python/requirements/test-requirements.txt
@@ -680,7 +683,6 @@ grpcio==1.60.0 ; sys_platform != "darwin"
     # via
     #   -r /ray/ci/../python/requirements.txt
     #   -r /ray/ci/../python/requirements/anyscale-requirements.txt
-    #   aim
     #   google-api-core
     #   google-cloud-bigquery
     #   grpcio-status
@@ -845,6 +847,8 @@ jaxlib==0.4.13
     #   dopamine-rl
     #   optax
     #   orbax-checkpoint
+jaxtyping==0.2.33
+    # via linear-operator
 jedi==0.19.1
     # via ipython
 jinja2==3.1.2
@@ -989,7 +993,7 @@ lightgbm==3.3.5
     # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
 lightning-utilities==0.11.2
     # via pytorch-lightning
-linear-operator==0.4.0
+linear-operator==0.5.2
     # via
     #   botorch
     #   gpytorch
@@ -1070,6 +1074,8 @@ mlagents-envs==0.28.0
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
 mlflow==2.9.2
     # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
+mmh3==4.1.0
+    # via pyiceberg
 mock==5.1.0
     # via pytest-shutil
 modin==0.22.2 ; python_version < "3.12"
@@ -1089,7 +1095,10 @@ moto==4.2.12
 moviepy==0.2.3.1
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
 mpmath==1.3.0
-    # via sympy
+    # via
+    #   botorch
+    #   gpytorch
+    #   sympy
 msal==1.28.1
     # via
     #   azure-cli-core
@@ -1138,6 +1147,7 @@ mypy-extensions==1.0.0
     # via
     #   black
     #   mypy
+    #   typing-inspect
 myst-nb==1.1.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 myst-parser==1.0.0
@@ -1216,6 +1226,7 @@ numpy==1.26.4
     #   altair
     #   bayesian-optimization
     #   bokeh
+    #   botorch
     #   chex
     #   cma
     #   cmaes
@@ -1308,9 +1319,7 @@ numpy==1.26.4
     #   xgboost
     #   zoopt
 nvidia-nccl-cu12==2.20.5
-    # via
-    #   -r /ray/ci/../python/requirements/ml/core-requirements.txt
-    #   xgboost
+    # via xgboost
 oauth2client==4.1.3
     # via
     #   gcs-oauth2-boto-plugin
@@ -1538,7 +1547,6 @@ proto-plus==1.22.3
 protobuf==3.20.3
     # via
     #   -r /ray/ci/../python/requirements.txt
-    #   aim
     #   dm-control
     #   google-api-core
     #   google-cloud-bigquery
@@ -1592,8 +1600,6 @@ py-partiql-parser==0.5.0
     # via moto
 py-spy==0.3.14
     # via -r /ray/ci/../python/requirements.txt
-py3nvml==0.2.7
-    # via aim
 py4j==0.10.9.7
     # via pyspark
 pyarrow==14.0.2
@@ -1628,6 +1634,7 @@ pydantic==2.5.0
     #   deepspeed
     #   fastapi
     #   gradio
+    #   pyiceberg
 pydantic-core==2.14.1
     # via pydantic
 pydot==1.4.2
@@ -1651,6 +1658,8 @@ pygments==2.18.0
     #   nbconvert
     #   rich
     #   sphinx
+pyiceberg==0.7.0
+    # via -r /ray/ci/../python/requirements/ml/data-test-requirements.txt
 pyjwt==2.8.0
     # via
     #   adal
@@ -1691,7 +1700,10 @@ pyparsing==3.1.1
     #   matplotlib
     #   moto
     #   pydot
+    #   pyiceberg
     #   torch-geometric
+pyre-extensions==0.0.30
+    # via ax-platform
 pyro-api==0.1.2
     # via pyro-ppl
 pyro-ppl==1.8.6
@@ -1770,6 +1782,7 @@ python-dateutil==2.8.2
     #   moto
     #   pandas
     #   segment-analytics-python
+    #   strictyaml
 python-jose==3.3.0
     # via moto
 python-json-logger==2.0.7
@@ -1886,6 +1899,7 @@ requests==2.31.0
     #   moto
     #   msal
     #   msrest
+    #   pyiceberg
     #   ray
     #   requests-oauthlib
     #   requests-toolbelt
@@ -1936,6 +1950,7 @@ rich==13.3.2
     #   comet-ml
     #   flax
     #   memray
+    #   pyiceberg
     #   semgrep
     #   typer
 rsa==4.7.2
@@ -1983,6 +1998,7 @@ scipy==1.11.4
     #   configspace
     #   dm-control
     #   gpy
+    #   gpytorch
     #   hpbandster
     #   hyperopt
     #   jax
@@ -2004,9 +2020,7 @@ scipy==1.11.4
     #   torch-sparse
     #   xgboost
 segment-analytics-python==2.2.0
-    # via
-    #   -r /ray/ci/../python/requirements/test-requirements.txt
-    #   aim
+    # via -r /ray/ci/../python/requirements/test-requirements.txt
 semantic-version==2.10.0
     # via
     #   comet-ml
@@ -2100,6 +2114,7 @@ snowflake-connector-python==3.11.0
 sortedcontainers==2.4.0
     # via
     #   distributed
+    #   pyiceberg
     #   snowflake-connector-python
 soundfile==0.12.1
     # via -r /ray/ci/../python/requirements/ml/data-test-requirements.txt
@@ -2122,14 +2137,14 @@ sphinxcontrib-qthelp==1.0.8
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
-sqlalchemy==1.4.17
+sqlalchemy==2.0.32
     # via
     #   aim
     #   alembic
-    #   ax-platform
     #   jupyter-cache
     #   mlflow
     #   optuna
+    #   pyiceberg
     #   pymars
 sqlglot==25.6.1
     # via fugue
@@ -2151,6 +2166,8 @@ statsmodels==0.14.0
     # via
     #   hpbandster
     #   statsforecast
+strictyaml==1.7.3
+    # via pyiceberg
 supersuit==3.8.0 ; python_version < "3.12"
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
 sympy==1.13.1
@@ -2168,7 +2185,9 @@ tblib==3.0.0
     #   -r /ray/ci/../python/requirements/docker/ray-docker-requirements.txt
     #   distributed
 tenacity==8.5.0
-    # via plotly
+    # via
+    #   plotly
+    #   pyiceberg
 tensorboard==2.15.2
     # via
     #   -r /ray/ci/../python/requirements/test-requirements.txt
@@ -2365,7 +2384,10 @@ triad==0.9.8
 trustme==0.9.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 typeguard==2.13.3
-    # via ax-platform
+    # via
+    #   ax-platform
+    #   jaxtyping
+    #   linear-operator
 typer==0.12.3
     # via -r /ray/ci/../python/requirements.txt
 types-python-dateutil==2.9.0.20240316
@@ -2395,12 +2417,17 @@ typing-extensions==4.8.0
     #   orbax-checkpoint
     #   pydantic
     #   pydantic-core
+    #   pyre-extensions
     #   pytorch-lightning
     #   semgrep
     #   snowflake-connector-python
+    #   sqlalchemy
     #   tensorflow
     #   torch
     #   typer
+    #   typing-inspect
+typing-inspect==0.9.0
+    # via pyre-extensions
 ujson==5.10.0
     # via python-lsp-jsonrpc
 uri-template==1.3.0
@@ -2484,6 +2511,7 @@ websocket-client==1.8.0
 websockets==11.0.3
     # via
     #   -r /ray/ci/../python/requirements/test-requirements.txt
+    #   aim
     #   gradio
     #   gradio-client
 werkzeug==2.3.8
@@ -2515,7 +2543,6 @@ xlrd==2.0.1
 xmltodict==0.13.0
     # via
     #   moto
-    #   py3nvml
     #   yq
 xxhash==3.4.1
     # via
