--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -342,7 +342,7 @@ py_test(
     name = "learning_tests_pendulum_cql",
     main = "tuned_examples/cql/pendulum_cql.py",
     tags = ["team:rllib", "exclusive", "learning_tests", "torch_only", "learning_tests_cartpole", "learning_tests_discrete", "learning_tests_pytorch_use_all_core"],
-    size = "medium",
+    size = "large",
     srcs = ["tuned_examples/cql/pendulum_cql.py"],
     # Include the zipped json data file as well.
     data = [
