--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -155,6 +155,8 @@ aws-sam-translator==1.81.0
     # via cfn-lint
 aws-xray-sdk==2.12.1
     # via moto
+ax-platform==0.3.2
+    # via -r /ray/ci/../python/requirements/ml/tune-requirements.txt
 azure-cli-core==2.62.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 azure-cli-telemetry==1.1.0
@@ -233,6 +235,8 @@ botocore==1.29.76
     #   boto3
     #   moto
     #   s3transfer
+botorch==0.8.5
+    # via ax-platform
 braceexpand==0.1.7
     # via webdataset
 bracex==2.4
@@ -662,6 +666,8 @@ googleapis-common-protos==1.61.0
     #   tensorflow-metadata
 gpy==1.13.1
     # via -r /ray/ci/../python/requirements/ml/tune-test-requirements.txt
+gpytorch==1.10
+    # via botorch
 gradio==3.50.2 ; platform_system != "Windows"
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 gradio-client==0.6.1
@@ -983,6 +989,10 @@ lightgbm==3.3.5
     # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
 lightning-utilities==0.11.2
     # via pytorch-lightning
+linear-operator==0.4.0
+    # via
+    #   botorch
+    #   gpytorch
 llvmlite==0.42.0
     # via
     #   -r /ray/ci/../python/requirements/test-requirements.txt
@@ -1114,6 +1124,8 @@ multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
+multipledispatch==1.0.0
+    # via botorch
 multiprocess==0.70.15
     # via
     #   datasets
@@ -1296,9 +1308,7 @@ numpy==1.26.4
     #   xgboost
     #   zoopt
 nvidia-nccl-cu12==2.20.5
-    # via
-    #   -r /ray/ci/../python/requirements/ml/core-requirements.txt
-    #   xgboost
+    # via xgboost
 oauth2client==4.1.3
     # via
     #   gcs-oauth2-boto-plugin
@@ -1497,6 +1507,8 @@ platformdirs==3.11.0
     #   snowflake-connector-python
     #   virtualenv
     #   wandb
+plotly==5.23.0
+    # via ax-platform
 pluggy==1.3.0
     # via pytest
 polars==0.14.21
@@ -1680,6 +1692,8 @@ pyparsing==3.1.1
     #   torch-geometric
 pyro-api==0.1.2
     # via pyro-ppl
+pyro-ppl==1.9.1
+    # via botorch
 pyro4==4.82
     # via hpbandster
 pyrsistent==0.20.0
@@ -2106,6 +2120,14 @@ sphinxcontrib-qthelp==1.0.8
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
+sqlalchemy==1.4.53
+    # via
+    #   aim
+    #   alembic
+    #   jupyter-cache
+    #   mlflow
+    #   optuna
+    #   pymars
 sqlglot==25.6.1
     # via fugue
 sqlparse==0.5.1
@@ -2339,6 +2361,8 @@ triad==0.9.8
     #   qpd
 trustme==0.9.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
+typeguard==2.13.3
+    # via ax-platform
 typer==0.12.3
     # via -r /ray/ci/../python/requirements.txt
 types-python-dateutil==2.9.0.20240316
