--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -1308,9 +1308,7 @@ numpy==1.26.4
     #   xgboost
     #   zoopt
 nvidia-nccl-cu12==2.20.5
-    # via
-    #   -r /ray/ci/../python/requirements/ml/core-requirements.txt
-    #   xgboost
+    # via xgboost
 oauth2client==4.1.3
     # via
     #   gcs-oauth2-boto-plugin
@@ -1509,7 +1507,7 @@ platformdirs==3.11.0
     #   snowflake-connector-python
     #   virtualenv
     #   wandb
-plotly==5.18.0
+plotly==5.23.0
     # via ax-platform
 pluggy==1.3.0
     # via pytest
@@ -1694,7 +1692,7 @@ pyparsing==3.1.1
     #   torch-geometric
 pyro-api==0.1.2
     # via pyro-ppl
-pyro-ppl==1.8.6
+pyro-ppl==1.9.1
     # via botorch
 pyro4==4.82
     # via hpbandster
@@ -2122,11 +2120,10 @@ sphinxcontrib-qthelp==1.0.8
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
-sqlalchemy==1.4.17
+sqlalchemy==1.4.53
     # via
     #   aim
     #   alembic
-    #   ax-platform
     #   jupyter-cache
     #   mlflow
     #   optuna
