--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -236,7 +236,7 @@ botocore==1.29.76
     #   boto3
     #   moto
     #   s3transfer
-botorch==0.11.3
+botorch==0.8.5
     # via ax-platform
 braceexpand==0.1.7
     # via webdataset
@@ -669,7 +669,7 @@ googleapis-common-protos==1.61.0
     #   tensorflow-metadata
 gpy==1.13.1
     # via -r /ray/ci/../python/requirements/ml/tune-test-requirements.txt
-gpytorch==1.12
+gpytorch==1.10
     # via botorch
 gradio==3.50.2 ; platform_system != "Windows"
     # via -r /ray/ci/../python/requirements/test-requirements.txt
@@ -847,8 +847,6 @@ jaxlib==0.4.13
     #   dopamine-rl
     #   optax
     #   orbax-checkpoint
-jaxtyping==0.2.33
-    # via linear-operator
 jedi==0.19.1
     # via ipython
 jinja2==3.1.2
@@ -993,7 +991,7 @@ lightgbm==3.3.5
     # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
 lightning-utilities==0.11.2
     # via pytorch-lightning
-linear-operator==0.5.2
+linear-operator==0.4.0
     # via
     #   botorch
     #   gpytorch
@@ -1095,10 +1093,7 @@ moto==4.2.12
 moviepy==0.2.3.1
     # via -r /ray/ci/../python/requirements/ml/rllib-test-requirements.txt
 mpmath==1.3.0
-    # via
-    #   botorch
-    #   gpytorch
-    #   sympy
+    # via sympy
 msal==1.28.1
     # via
     #   azure-cli-core
@@ -1147,7 +1142,6 @@ mypy-extensions==1.0.0
     # via
     #   black
     #   mypy
-    #   typing-inspect
 myst-nb==1.1.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 myst-parser==1.0.0
@@ -1226,7 +1220,6 @@ numpy==1.26.4
     #   altair
     #   bayesian-optimization
     #   bokeh
-    #   botorch
     #   chex
     #   cma
     #   cmaes
@@ -1702,8 +1695,6 @@ pyparsing==3.1.1
     #   pydot
     #   pyiceberg
     #   torch-geometric
-pyre-extensions==0.0.30
-    # via ax-platform
 pyro-api==0.1.2
     # via pyro-ppl
 pyro-ppl==1.9.1
@@ -1998,7 +1989,6 @@ scipy==1.11.4
     #   configspace
     #   dm-control
     #   gpy
-    #   gpytorch
     #   hpbandster
     #   hyperopt
     #   jax
@@ -2137,7 +2127,7 @@ sphinxcontrib-qthelp==1.0.8
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
-sqlalchemy==1.4.53
+sqlalchemy==2.0.32
     # via
     #   aim
     #   alembic
@@ -2384,10 +2374,7 @@ triad==0.9.8
 trustme==0.9.0
     # via -r /ray/ci/../python/requirements/test-requirements.txt
 typeguard==2.13.3
-    # via
-    #   ax-platform
-    #   jaxtyping
-    #   linear-operator
+    # via ax-platform
 typer==0.12.3
     # via -r /ray/ci/../python/requirements.txt
 types-python-dateutil==2.9.0.20240316
@@ -2417,7 +2404,6 @@ typing-extensions==4.8.0
     #   orbax-checkpoint
     #   pydantic
     #   pydantic-core
-    #   pyre-extensions
     #   pytorch-lightning
     #   semgrep
     #   snowflake-connector-python
@@ -2425,9 +2411,6 @@ typing-extensions==4.8.0
     #   tensorflow
     #   torch
     #   typer
-    #   typing-inspect
-typing-inspect==0.9.0
-    # via pyre-extensions
 ujson==5.10.0
     # via python-lsp-jsonrpc
 uri-template==1.3.0
