disable python tests

--- a/.buildkite/core.rayci.yml
+++ b/.buildkite/core.rayci.yml
@@ -292,6 +292,7 @@ steps:
   - label: ":windows: python tests"
     tags:
       - python
+      - disabled
     job_env: WINDOWS
     instance_type: windows
     commands:
@@ -301,6 +302,7 @@ steps:
   - label: ":windows: core tests"
     tags:
       - core_cpp
+      - disabled
     job_env: WINDOWS
     instance_type: windows
     commands:
