[data] adopt upstream build env name (#897)
using latest rather than 17

--- a/anyscale/ci/buildkite/data.rayci.yml
+++ b/anyscale/ci/buildkite/data.rayci.yml
@@ -10,14 +10,14 @@ steps:
     depends_on: data6build
     job_env: forge
 
-  - label: ":database: data: runtime arrow 17 tests"
+  - label: ":database: data: runtime arrow 17 (latest) tests"
     instance_type: medium
     commands:
       - bazel run //ci/ray_ci:test_in_docker -- //python/ray/anyscale/data/... data 
         --parallelism-per-worker 3
-        --build-name data17build
+        --build-name datalbuild
         --test-env RAY_DATA_USE_STREAMING_EXECUTOR=1
-    depends_on: data17build
+    depends_on: datalbuild
     job_env: forge
 
   - label: ":database: data: runtime arrow nightly tests"
