--- a/src/ray/protobuf/BUILD
+++ b/src/ray/protobuf/BUILD
@@ -264,7 +264,7 @@ python_grpc_compile(
 proto_library(
     name = "export_task_event_proto",
     srcs = ["export_api/export_task_event.proto"],
-    deps = [":common_proto", ":export_runtime_env_proto"],
+    deps = [":common_proto", ":export_runtime_env_proto", ":export_actor_event_proto"],
 )
 
 cc_proto_library(
@@ -290,6 +290,22 @@ cc_proto_library(
 python_grpc_compile(
     name = "export_runtime_env_py_proto",
     deps = [":export_runtime_env_proto"],
+)
+
+proto_library(
+    name = "export_actor_event_proto",
+    srcs = ["export_api/export_actor_data.proto"],
+    deps = [":common_proto"],
+)
+
+cc_proto_library(
+    name = "export_actor_event_cc_proto",
+    deps = [":export_actor_event_proto"],
+)
+
+python_grpc_compile(
+    name = "export_actor_event_py_proto",
+    deps = [":export_actor_event_proto"],
 )
 
 # Job agent.
