[Data] Ensure `soundfile` is installed for audio benchmark release test (#901)
The audio inference benchmark depends on `soundfile`, but `soundfile`
isn't included in the Ray image by default anymore. This PR ensures that
the dependency is installed specifically for the release test.

---------

Signed-off-by: Balaji Veeramani <bveeramani@berkeley.edu>
Co-authored-by: Lonnie Liu <95255098+aslonnie@users.noreply.github.com>

--- a/release/release_runtime_tests.yaml
+++ b/release/release_runtime_tests.yaml
@@ -60,6 +60,7 @@
   cluster:
     byod:
       type: gpu
+      post_build_script: byod_install_soundfile.sh
     cluster_compute: audio_batch_inference_benchmark_compute.yaml
 
   run:
